Fix overflow when articles contain large math

--- a/src/style/mobile/article.scss
+++ b/src/style/mobile/article.scss
@@ -1,6 +1,7 @@
 article {
   margin-left: 10px;
   width: auto;
+  overflow-x: auto;
 
   .date {
     left: 0;
